# lsap_hw5_wikiAssistant_byAntigravity

./: .env.example  .gitignore  Dockerfile  Dockerfile-alpine  Dockerfile-backend  Dockerfile-frontend  Dockerfile-ubuntu  Dockerfile-unoptimized  README.md  docker-compose.yml  improvement_report.md  nginx.conf  setup_report.md  start.sh  user_story.md
backend/: pyproject.toml  server.py  taskfile.yml  utils.py
data/: chat_history.json
frontend/: agent.py  chat.py  config.py  pyproject.toml  taskfile.yml  utils.py
