[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "andre.liang",email = "namwoam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
