[project]
name = "frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "andre.liang",email = "namwoam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "dspy (>=3.0.4,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
